# fastkit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GENERATED_PROJECT_STRUCTURE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
Docs/: fastkit-enhancement-plan.md  fastkit-jobs-service-guide.md
docs/: README.md  architecture.md  commands.md  getting-started.md  integrations.md  templates.md
examples/: api_gateway.py  basic_project.py  custom_plugin.py  full_stack.py  microservices.py  with_auth.py
fastkit/: __main__.py  constants.py  version.py
fastkit/Docs/: roadmap.md
fastkit/cli/: app.py  main.py
fastkit/cli/assets/: __init__.py  ascii_art.py
fastkit/config/: default.yaml
fastkit/exceptions/: __init__.py  cli.py  generator.py  project.py
fastkit/generators/: auth_generator.py  cache_generator.py  cleanup_utils.py  db_generator.py  dependency_manager.py  domain_generator.py  project_generator.py  service_generator.py  utils.py
fastkit/helpers/: ui.py
fastkit/schemas/: domain.py  integration.py  project.py
fastkit/shared/: project_utils.py  service_help.py  ui.py
fastkit/utils/: console.py  dependencies.py  file_operations.py  git.py  network.py  spinner.py  template_engine.py
tests/fixtures/: project_configs.py  templates.py
tests/integration/: test_cli_commands.py  test_domain_creation.py  test_project_generation.py
tests/unit/: test_cli.py  test_core.py  test_generators.py  test_templates.py
(+245 files in other folders)
